@@ -5,6 +5,7 @@ FreeRADIUS 0.9.2 ; Date: $Date$, urgency=low
 	* rlm_counter rejects packets which predate last server reset
 	* Fix rlm_exec to work when wait=no
 	* radrelay rejects records without an Acct-Status-Type attribute
+	* Fix rlm_attr_filter to work in post-proxy (as intended)
 
 FreeRADIUS 0.9.1 ; Date: 2003/09/04 14:56:34, urgency=low
 
